openshift/dc-exposure-notification.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: https://github.com/THLfi/koronavilkku-backend.git
  labels:
    app: koronavilkku
    app.kubernetes.io/component: exposure-notification
    app.kubernetes.io/instance: exposure-notification
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: koronavilkku
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: "11"
  name: exposure-notification
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: koronavilkku
    deploymentconfig: exposure-notification
  strategy:
    activeDeadlineSeconds: 21600
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: koronavilkku
        deploymentconfig: exposure-notification
    spec:
      containers:
      - env:
        - name: EN_DEMO_MODE
          value: "true"
        - name: EN_SIGNING_VERSION
          value: v1
        image: exposure-notification:latest
        imagePullPolicy: Always
        name: exposure-notification
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health/liveness
            port: 9080
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 9080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health/readiness
            port: 9080
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - exposure-notification
      from:
        kind: ImageStreamTag
        name: exposure-notification:latest
    type: ImageChange
  - type: ConfigChange
