openshift/dc-publish-token.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: https://github.com/THLfi/koronavilkku-backend.git
  labels:
    app: koronavilkku
    app.kubernetes.io/component: publish-token
    app.kubernetes.io/instance: publish-token
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: koronavilkku
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: "11"
  name: publish-token
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: koronavilkku
    deploymentconfig: publish-token
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: koronavilkku
        deploymentconfig: publish-token
    spec:
      containers:
      - env:
        - name: PT_DATABASE_URL
          valueFrom:
            secretKeyRef:
              name: kv-secrets
              key: DATABASE_URL
        - name: PT_DATABASE_USERNAME
          valueFrom:
            secretKeyRef:
              name: kv-secrets
              key: DATABASE_USERNAME
        - name: PT_DATABASE_PASSWORD
          valueFrom:
            secretKeyRef:
              name: kv-secrets
              key: DATABASE_PASSWORD
        image: publish-token:latest
        imagePullPolicy: Always
        name: publish-token
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health/liveness
            port: 9080
            scheme: HTTP
          initialDelaySeconds: 70
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 9080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health/readiness
            port: 9080
            scheme: HTTP
          initialDelaySeconds: 70
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 512Mi
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - publish-token
      from:
        kind: ImageStreamTag
        name: publish-token:latest
    type: ImageChange
  - type: ConfigChange
